fixed:手机上菜单不能隐藏

--- a/11.messagebox.html
+++ b/11.messagebox.html
@@ -77,7 +77,7 @@
 				</lte-main-sidebar>
 
 				<!-- 工作区 -->
-				<lte-main-content :style="{'padding-top':'5px'}">
+				<lte-main-content style="padding-top:5px">
 					<blockquote>
 					  <h5>本节简介</h5>
 					  <ul>
@@ -119,9 +119,7 @@
 					<lte-copy-right></lte-copy-right>
 					<lte-version></lte-version>
 				</lte-main-footer>
-			</lte-layout>
-			<!-- TODO: 需要考虑这个层的作用 -->
-			<div id="sidebar-overlay"></div>
+			</lte-layout>			
 		</div>
 		<!-- ./wrapper -->
 
