全屏退出监听，自动改变样式

--- a/11.messagebox.html
+++ b/11.messagebox.html
@@ -107,6 +107,9 @@
 							<lte-nav-item>
 								<lte-push-controlsidebar />
 							</lte-nav-item>
+							<lte-nav-item :hide-in-phone="true">
+								<lte-full-screen />
+							</lte-nav-item>
 						</lte-navbar-nav>
 					</lte-navbar>
 				</lte-main-content>
