--- a/12.sets.html
+++ b/12.sets.html
@@ -144,7 +144,7 @@
 		<script src="js/animations.js"></script>
 
 		<!-- Components -->
-		<script src="js/Layout.js"></script>
+		<!-- <script src="js/Layout.js"></script> -->
 		<script src="js/FullScreen.js"></script>
 		<script src="js/PushMenu.js"></script>
 		<script src="js/UserPanel.js"></script>
@@ -233,7 +233,7 @@
 				}
 			});
 
-			app.component('lte-layout', Layout);
+			// app.component('lte-layout', Layout);
 			app.component('lte-push-menu', PushMenu);
 			app.component('lte-full-screen', FullScreent);
 			app.component('lte-main-sidebar-logo', Logo);
@@ -248,6 +248,21 @@
 			app.component('lte-main-sidebar', MainSidebar);
 			app.component('lte-notification', Notification);
 			app.component('lte-messagebox', MessageBox);
+			
+			app.component('lte-layout', {
+				beforeCreate() {
+					// 阻止动画效果
+					document.body.classList.add("hold-transition");
+					// 最小化sidebar
+					document.body.classList.add("sidebar-mini");
+				},
+				mounted() {
+					this.$el.parentNode.classList.add("wrapper");
+					// 完全模仿adminlte的作法，没搞明白这个样式为什么要先加上，而后再去掉
+					document.body.classList.remove("hold-transition");
+				},
+				template: "<slot></slot>"
+			});
 
 			app.component('lte-switch', {
 				template: `
