--- a/2.pushmenu.html
+++ b/2.pushmenu.html
@@ -31,7 +31,163 @@
 
   <!-- 工作区 -->
   <div class="content-wrapper">
-    Content
+    <div class="container-fluid">
+		<div class="row">
+			<div class="col-12">
+				<table class="table">
+					<thead>
+					  <tr>
+						<th scope="col">#</th>
+						<th scope="col">Name</th>
+						<th scope="col" width="50%">Color</th>
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr>
+						<th scope="row">1</th>
+						<td>云门</td>
+						<td style="background-color: #9AC9D9;">#9AC9D9</td>
+					  </tr>
+					  <tr>
+						<th scope="row">2</th>
+						<td>西子</td>
+						<td style="background-color: #81BAC1;">#81BAC1</td>
+					  </tr>
+					  <tr>
+						<th scope="row">3</th>
+						<td>正青</td>
+						<td style="background-color: #6BA4AB;">#6BA4AB</td>
+					  </tr>
+					  <tr>
+						<th scope="row">4</th>
+						<td>法翠</td>
+						<td style="background-color: #078890;">#078890</td>
+					  </tr>
+					  <tr>
+						<th scope="row">5</th>
+						<td>白青</td>
+						<td style="background-color: #97B1C0;">#97B1C0</td>
+					  </tr>
+					  <tr>
+						<th scope="row">6</th>
+						<td style="background-color: #5e90b8;">竹月(#5e90b8)</td>
+						<td style="background-color: #7F9AAB;">#7F9AAB</td>
+					  </tr>
+					  <tr>
+						<th scope="row">7</th>
+						<td>空青</td>
+						<td style="background-color: #648E86;">#648E86</td>
+					  </tr>
+					  <tr>
+						<th scope="row">8</th>
+						<td>井天</td>
+						<td style="background-color: #A0C6C7;">#A0C6C7</td>
+					  </tr>
+					  <tr>
+						<th scope="row">9</th>
+						<td>扁青</td>
+						<td style="background-color: #4F9092;">#4F9092</td>
+					  </tr>
+					  <tr>
+						<th scope="row">10</th>
+						<td>濯色</td>
+						<td style="background-color: #1D6865;">#1D6865</td>
+					  </tr>
+					  <tr>
+						<th scope="row">11</th>
+						<td>退红</td>
+						<td style="background-color: #87BAB3;">#87BAB3</td>
+					  </tr>
+					  <tr>
+						<th scope="row">12</th>
+						<td>二绿</td>
+						<td style="background-color: #5A9E99;">#5A9E99</td>
+					  </tr>
+					  <tr>
+						<th scope="row">13</th>
+						<td>铜青</td>
+						<td style="background-color: #2E8A82;">#2E8A82</td>
+					  </tr>
+					  <tr>
+						<th scope="row">14</th>
+						<td>石绿</td>
+						<td style="background-color: #176660;">#176660</td>
+					  </tr>
+					  <tr>
+						<th scope="row">15</th>
+						<td>秋蓝</td>
+						<td style="background-color: #7B8F9A;">#7B8F9A</td>
+					  </tr>
+					  <tr>
+						<th scope="row">16</th>
+						<td>霁蓝</td>
+						<td style="background-color: #3B4551;">#3B4551</td>
+					  </tr>
+					  <tr>
+						<th scope="row">17</th>
+						<td>濑见</td>
+						<td style="background-color: #161D29;">#161D29</td>
+					  </tr>
+					  <tr>
+						<th scope="row">18</th>
+						<td style="color:#161B85;">软翠</td>
+						<td style="background-color: rgb(0 109 135);">#006d87</td>
+					  </tr>
+					  <tr>
+						<th scope="row">19</th>
+						<td>柔蓝</td>
+						<td style="background-color: #056794;">#056794</td>
+					  </tr>
+					  <tr>
+						<th scope="row">20</th>
+						<td>碧城</td>
+						<td style="background-color: #0D4E77;">#0D4E77</td>
+					  </tr>
+					  <tr>
+						<th scope="row">21</th>
+						<td>蓝采和</td>
+						<td style="background-color: #00426C;">#00426C</td>
+					  </tr>
+					  <tr>
+						<th scope="row">22</th>
+						<td>帝释青</td>
+						<td style="background-color: #01335E;">#01335E</td>
+					  </tr>
+					  <tr>
+						<th scope="row">23</th>
+						<td>孔雀蓝</td>
+						<td style="background-color: #4990BC;">#4990BC</td>
+					  </tr>
+					  <tr>
+						<th scope="row">24</th>
+						<td>吐绶蓝</td>
+						<td style="background-color: #3B7DA5;">#3B7DA5</td>
+					  </tr>
+					  <tr>
+						<th scope="row">25</th>
+						<td>鱼师青</td>
+						<td style="background-color: #2A7B8E;">#2A7B8E</td>
+					  </tr>
+					  <tr>
+						<th scope="row">26</th>
+						<td>太师青</td>
+						<td style="background-color: #527486;">#527486</td>
+					  </tr>
+					  <tr>
+						<th scope="row">27</th>
+						<td>育阳染</td>
+						<td style="background-color: #57646D;">#57646D</td>
+					  </tr>
+					  <tr>
+						<th scope="row">28</th>
+						<td>天水碧</td>
+						<td style="background-color: #58A1AD;">#58A1AD</td>
+					  </tr>
+					</tbody>
+				  </table>
+			</div>
+		</div>
+	</div>
   </div>
 
   <!-- 底部页脚 -->
@@ -96,11 +252,11 @@
 			let windowWidh = null
 
 			const toggleMenu = () => {
-			if (!document.body.classList.contains("sidebar-collapse")) {
+			  if (!document.body.classList.contains("sidebar-collapse")) {
 				collapseMenu()
-			} else {
+			  } else {
 				openMenu()
-			}
+			  }
 			}
 
 			const windowed = () => {
@@ -134,5 +290,10 @@
 	  }).mount('#app');
 	}
 </script>
+<style>
+	td[style] {
+		color: #fff;
+	}
+</style>
 </body>
 </html>
