--- a/5.provideinject.html
+++ b/5.provideinject.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="app">
-      <lte-layout logo="img/AdminLTELogo.png" preloader-visible menu-close>
+      <lte-layout logo="img/AdminLTELogo.png" menu-collapse>
         <!-- 顶部页头 -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="min-height:3.5rem;">
           <ul class="navbar-nav">
