可设置菜单默认开合状态，预加载遮盖层可自动关闭

--- a/5.provideinject.html
+++ b/5.provideinject.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="app">
-      <lte-layout logo="img/AdminLTELogo.png" menu-collapse>
+      <lte-layout logo="img/AdminLTELogo.png" menu-collapse preloader-visible preloader-auto-close>
         <!-- 顶部页头 -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="min-height:3.5rem;">
           <ul class="navbar-nav">
