Provide/Inject 子组件实时获得响应性

--- a/5.provideinject.html
+++ b/5.provideinject.html
@@ -77,9 +77,12 @@
         const closePreloader = Vue.inject('closePreloader');
         setTimeout(()=> {
           setPreloaderMessage("系统正在拼命加载中，请稍后...")
-          setTimeout(()=> {
-            closePreloader();
-          }, 2000);
+          setTimeout(() => {
+            setPreloaderMessage("加载完毕，请耐心等待片刻...")
+            setTimeout(()=> {
+              closePreloader();
+            }, 2000);
+          }, 1000);
         }, 1000);
       });
     },
