目录文本样式

--- a/6.mainsider&menu.html
+++ b/6.mainsider&menu.html
@@ -11,6 +11,18 @@
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="css/adminlte.min.css">
+  <style>
+    .nav-link.nav_ell{
+      display: flex;
+      align-items: center;
+    }
+    .nav_text{
+      display: flex;
+      overflow: hidden;
+      /* text-overflow: ellipsis; */
+      max-width: 7em;
+    }
+  </style>
 </head>
 <body>
     <div id="app">
