fix: pushmenu可复用逻辑引入

--- a/5.provideinject.html
+++ b/5.provideinject.html
@@ -60,8 +60,8 @@
     </div>
 </body>
 <script src="js/vue.global.3.2.26.js"></script>
-<!-- Event Bus -->
-<script src="js/mitt.umd.js"></script>
+<!-- 可复用逻辑 -->
+<script src="js/toggleMenu.js"></script>
 <!-- 组件 -->
 <script src="js/LayoutProvide.js"></script>
 <script src="js/PushMenuInject.js"></script>
