--- a/6.mainsider&menu.html
+++ b/6.mainsider&menu.html
@@ -83,6 +83,8 @@
 <script src="js/vue.global.3.2.26.js"></script>
 <!-- 动画 -->
 <script src="js/animations.js"></script>
+<!-- 可复用逻辑 -->
+<script src="js/toggleMenu.js"></script>
 <!-- 组件 -->
 <script src="js/LayoutProvide.js"></script>
 <script src="js/PushMenuInject.js"></script>
