--- a/8.dropdown.html
+++ b/8.dropdown.html
@@ -63,6 +63,8 @@
 <script src="js/vue-router.global.js"></script>
 <!-- 动画 -->
 <script src="js/animations.js"></script>
+<!-- 可复用逻辑 -->
+<script src="js/toggleMenu.js"></script>
 <!-- 组件 -->
 <script src="js/LayoutProvide.js"></script>
 <script src="js/PushMenuInject.js"></script>
