--- a/A.10.mainsidebar&pushmenusetup.html
+++ b/A.10.mainsidebar&pushmenusetup.html
@@ -19,8 +19,8 @@
       <lte-layout>
         <!-- 顶部页头 -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="min-height:3.5rem;">
-          <ul class="navbar-nav" title="注入式PushMenu">
-            <li class="nav-item">
+          <ul class="navbar-nav">
+            <li class="nav-item" title="注入式PushMenu">
               <a class="nav-link" href="#" @click.prevent ref="pushmenu"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item" title="组件式PushMenu">
